--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="showcase">
         <div class="container">
             <div class="text">
-                <h1>let's make <span> your body</span> with<br> a good shape.</h1>
+                <h1>let's make <span> your body</span> with a good shape.</h1>
                 <p>making excersice makes <span>your body fit, healthy</span> and more beautiful than normal.</p>
                 <button class="btn">join us</button>
             </div>
