renaming the comments

--- a/index.html
+++ b/index.html
@@ -174,31 +174,61 @@
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="flush-headingOne">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                      How long can it take to have six packs?
+                      Is gym good for weight loss?
                     </button>
                   </h2>
                   <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                    <div class="accordion-body">Absolutely not! While gyms are excellent places to use equipment to help you reach your weight loss and fitness, they are not necessary to lose weight. Losing weight is about increasing physical activity and decreasing caloric intake..</div>
                   </div>
                 </div>
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="flush-headingTwo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                      How much is the price per  Month?
+                        How much is the price of the gym?
                     </button>
                   </h2>
                   <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+                    <div class="accordion-body">After analyzing the prices of 16 popular U.S. gym chains, we found that the average monthly cost of a gym membership to enjoy the benefits of working out in 2021 is $37.71.</div>
                   </div>
                 </div>
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="flush-headingThree">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                      Is there weight gain powder?
+                      Which one is better than gym or workout?
                     </button>
                   </h2>
                   <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+                    <div class="accordion-body">Going to the gym isn't the only way to get in a great workout. Working out at home can be just as effective. While a gym provides a dedicated space, home workouts offer more flexibility and can be more efficient.</div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="flush-headingFour">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseThree">
+                      What is the best time to go the gym?
+                    </button>
+                  </h2>
+                  <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">Morning workouts are ideal for burning fat and losing weight, but afternoon workouts may give your performance a boost, since you'll have eaten a meal or two by the time you get going..</div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="flush-headingFive">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseThree">
+                      Can i negotiate gym membership?
+                    </button>
+                  </h2>
+                  <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">Morning workouts are ideal for burning fat and losing weight, but afternoon workouts may give your performance a boost, since you'll have eaten a meal or two by the time you get going.</div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="flush-headingSix">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSix" aria-expanded="false" aria-controls="flush-collapseThree">
+                      Can i go to gym under 20 years old?
+                    </button>
+                  </h2>
+                  <div id="flush-collapseSix" class="accordion-collapse collapse" aria-labelledby="flush-headingSix" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">yes, you can go ideal for burning fat and losing weight, but afternoon workouts may give your performance a boost, since you'll have eaten a meal or two by the time you get going.</div>
                   </div>
                 </div>
               </div>
@@ -314,28 +344,28 @@
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                       <i class="fa fa-quote-left"></i>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis, consectetur ab. Rem nisi asperiores obcaecati magni, commodi animi distinctio assumenda?</p>
+                    <p>The origin of yoga have been speculated to date back to pre-vedic indian tradition.but most likely developed around the dix and fifth centuries.</p>
                     <div class="img">
-                        <img src="./img/emily-sea-coiWR0gT8Cw-unsplash-min.jpg" alt="">
-                        <h3 class="name">john doe</h3>
-                        <span class="jop">house wife</span>
+                        <img src="./img/g1-min.jpg" alt="">
+                        <h3 class="name">Harry johnson</h3>
+                        <span class="jop">ex-fat girl</span>
                     </div>
                   </div>
                   <div class="carousel-item ">
                     <i class="fa fa-quote-left"></i>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis, consectetur ab. Rem nisi asperiores obcaecati magni, commodi animi distinctio assumenda?</p>
+                    <p>I never know i'm handsome like this there is really alot hidden piciatis, consectetur ab. Rem nisi asperiores obcaecati magni, commodi animi distinctio assumenda?</p>
                     <div class="img">
-                        <img src="./img/emily-sea-coiWR0gT8Cw-unsplash-min.jpg" alt="">
-                        <h3 class="name">john doe</h3>
-                        <span class="jop">house wife</span>
+                        <img src="./img/b2-min.jpg" alt="">
+                        <h3 class="name">Salliva felix</h3>
+                        <span class="jop">lazy boy</span>
                     </div>
                   </div>
                   <div class="carousel-item ">
                     <i class="fa fa-quote-left"></i>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis, consectetur ab. Rem nisi asperiores obcaecati magni, commodi animi distinctio assumenda?</p>
+                    <p>Before and after me are two different stages and it's hard somebody to believe if i show the two photos of me res obcaecati magni, commodi animi distinctio assumenda?</p>
                     <div class="img">
                         <img src="./img/emily-sea-coiWR0gT8Cw-unsplash-min.jpg" alt="">
-                        <h3 class="name">john doe</h3>
+                        <h3 class="name">Dalot vidic</h3>
                         <span class="jop">house wife</span>
                     </div>
                   </div>
@@ -344,9 +374,37 @@
               </div>
         </div>
     </div>
+    <!-- our image gallery------------ -->
+    <div class="image-gallery">
+        <div class="container">
+            <div class="btns">
+                <button class="butn active" data-name="all">all</button>
+                <button class="butn" data-name="yoga">yoga</button>
+                <button class="butn" data-name="sixpack">sixpack</button>
+                <button class="butn" data-name="men">men</button>
+                <button class="butn" data-name="girl">girls</button>
+            </div>
+            <div class="images">
+               <img src="./img/yoga1-min.jpg" alt="" class="img" data-name="yoga">
+               <img src="./img/yoga2-min.jpg" alt="" class="img" data-name="yoga">
+               <img src="./img/yoga4-min.jpg" alt="" class="img" data-name="yoga">
+               <img src="./img/b2-min.jpg" alt="" class="img" data-name="men">
+               <img src="./img/b1-min.jpg" alt="" class="img" data-name="men">
+               <img src="./img/g1-min.jpg" alt="" class="img" data-name="girl">
+               <img src="./img/g2-min.jpg" alt="" class="img" data-name="girl">
+               <img src="./img/sixpack1-min.jpg" alt="" class="img" data-name="sixpack">
+               <img src="./img/g2-min.jpg" alt="" class="img" data-name="girl">
+               <img src="./img/sixpack2-min.jpg" alt="" class="img" data-name="sixpack">
+               <img src="./img/sixpack3-min.jpg" alt="" class="img" data-name="sixpack">
+            </div>
+        </div>
+    </div>
+    <!-- our image gallery  ends ------------ -->
     <!-- contact -->
     <div class="contact">
         <div class="container">
+            <h1 class="title">contact us</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos distinctio vel placeat porro iure. Consequatur incidunt id beatae eius expedita cumque perferendis, asperiores enim ipsam vel alias, similique autem dolorem!</p>
             <div class="inner">
                 <form>
                     <div class="both">
@@ -366,6 +424,62 @@
             </div>
         </div>
     </div>
+
+    <!-- footers -->
+    <footer>
+        <div class="container">
+            <div>
+                <h2>company</h2>
+                <ul>
+                    <li>about us</li>
+                    <li>company</li>
+                    <li>blog</li>
+                    <li>privacy and policy</li>
+                </ul>
+            </div>
+            <div>
+                <h2>opening time</h2>
+                <ul>
+                    <li>monday: 03:00 am</li>
+                    <li>Tuesday 04:00 am</li>
+                    <li>Wednesday 05:00 am</li>
+                    <li>Thursday 06:00 am</li>
+                    <li>Saturday: 04:00 am</li>
+                    <li>Sunday: 07:00 am</li>
+                </ul>
+            </div>
+            <div>
+                <h2>info</h2>
+                <ul class="flex">
+                    <li>
+                        <span class="icon"><i class="fa fa-phone-alt"></i></span>
+                        <span class="name">+27 677 897 665</span>
+                    </li>
+                    <li>
+                        <span class="icon"><i class="fa fa-envelope"></i></span>
+                        <span class="name">mofitness@gmail.com</span>
+                    </li>
+                    <li>
+                        <span class="icon"><i class="fa fa-whatsapp"></i></span>
+                        <span class="name">+27 677 897 665</span>
+                    </li>
+                    <li>
+                        <span class="icon"><i class="fa fa-map-marker"></i></span>
+                        <span class="name">+27 677 897 665</span>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <h2>subscribe us</h2>
+                <div class="form">
+                    <input type="text">
+                    <i class="fa fa-search"></i>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <p class="copy">&copy; 2022 copyright reserved.developer by <span>ahmed abdirahman</span></p>
+    </footer>
 
 
 
