renaming the comments

--- a/index.html
+++ b/index.html
@@ -377,6 +377,8 @@
     <!-- our image gallery------------ -->
     <div class="image-gallery">
         <div class="container">
+            <h1 class="title">our image gallery</h1>
+            <p class="p">In these images you can see the photos of our clients that make alot of efforts to look so good and our trainer helped them to loose weight and the otherside to get muscles and six pack ups look them and motivate your self everything is possible, even the word impossible means <span>I'm possible.</span></p>
             <div class="btns">
                 <button class="butn active" data-name="all">all</button>
                 <button class="butn" data-name="yoga">yoga</button>
