mofitness is completed

--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
     <title>Mofitness</title>
 </head>
 <body>
-<div class="navbar">
+    <!-- fixed square to top -->
+    <div class="pop">
+       <a href="#top">
+        <i class="fas fa-arrow-down"></i>
+       </a>
+    </div>
+    <!-- navbar -->
+<div class="navbar" id="top">
     <div class="container">
         <a href="index.html" class="logo">
             <span class="icon"><i class="fas fa-dumbbell"></i></span>
@@ -23,16 +30,17 @@
             <ul>
                 <li><a href="#home">home</a></li>
                 <li><a href="#classes">classes</a></li>
-                <li><a href="#classes">archive</a></li>
-                <li><a href="#classes">elements</a></li>
-                <li><a href="#classes">contact</a></li>
+                <li><a href="#shax">schedule</a></li>
+                <li><a href="#coaches">coaches</a></li>
+                <li><a href="#FAQ">FAQ</a></li>
+                <li><a href="#contact">contact</a></li>
             </ul>
         </div>
         <button class="btn menu-bar" id="menus"><i class="fa fa-bars" id="myminu"></i></button>
     </div>
 </div>
     <!-- showcase -->
-    <div class="showcase">
+    <div class="showcase" id="home">
         <div class="container">
             <div class="text">
                 <h1>let's make <span> your body</span> with a good shape.</h1>
@@ -50,8 +58,8 @@
             <div class="text">
                 <h1>about us</h1>
                 <p>Mofitness is one of the best gym and bodybuilding ares where you can build your body, health , diet and mentality. at Mofitness there are expert coaches from universities of the world and they have certificaties about nutrition and phythiorepest</p>
-                <p>Mofitness Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, ut dicta reiciendis nesciunt assumenda reprehenderit illo eos distinctio, voluptatem asperiores harum exercitationem hic porro veniam earum aspernatur ipsum quod magnam.</p>
-               <button class="btn">Learn more </button>
+                <p>Relax and enjoy a personalized day yoga experience in our camfortable sancuary. Be happy, do your homework and workouts never stop train continueosly.</p>
+                <button class="btn">Learn more </button>
             </div>
         </div>
     </div>
@@ -59,22 +67,22 @@
     <div class="program">
         <div class="container">
             <h1 class="title">our program</h1>
-            <p>ready to change your life to get physique with beatiful and healthy.healthy body makes active mind.</p>
+            <p class="p">Ready to change your life to get physique with beatiful and healthy.healthy body makes active mind.</p>
             <div class="grid">
                 <div class="card">
-                    <i class="fa fa-bicycle"></i>
-                    <h3>cyclling</h3>
-                    <p>cycling can help you muscles grow fast its slowly burns your fat of the stomach, calves and thigh also whole the body</p>
+                    <i class="fa fa-heart"></i>
+                    <h3>balance body</h3>
+                    <p>Balance your body means you have to have the avarage weight needs if your kg is divided into height</p>
                 </div>
                 <div class="card">
-                    <i class="fa fa-bicycle"></i>
-                    <h3>cyclling</h3>
-                    <p>Wimply dummy text of the printing and typesetting industryrem Ipsum has been ttandard dummy</p>
+                    <i class="fas fa-tint"></i>
+                    <h3>healthy daily life</h3>
+                    <p>Being health is the existance on earth after the end of life so to haave healthy you need to make your body more clean and built.</p>
                 </div>
                 <div class="card">
                     <i class="fa fa-user"></i>
-                    <h3>respect</h3>
-                    <p>Wimply dummy text of the printing and typesetting industryrem Ipsum has been ttandard dummy</p>
+                    <h3>challenge</h3>
+                    <p>Chalanging with others can make you do alot even if you can because you are trying to be the best.</p>
                 </div>
                 <div class="card">
                     <i class="fa fa-dumbbell"></i>
@@ -84,18 +92,18 @@
                 <div class="card">
                     <i class="fas fa-weight"></i>
                     <h3>weight loss</h3>
-                    <p>Wimply dummy text of the printing and typesetting industryrem Ipsum has been ttandard dummy</p>
+                    <p>If you want to look pretty damn and wear every size you want without getting disturbed weight loss the un needed</p>
                 </div>
                 <div class="card">
-                    <i class="fas fa-walking"></i>
-                    <h3>runnig</h3>
-                    <p>Wimply dummy text of the printing and typesetting industryrem Ipsum has been ttandard dummy</p>
+                    <i class="fas fa-fire-alt"></i>
+                    <h3>fat burning</h3>
+                    <p>Having alot of fats of your body can cause you heart diseases you need make fat burning workout</p>
                 </div>
             </div>
         </div>
     </div>
     <!-- discount -->
-    <div class="discount">
+    <div class="discount" id="discount">
         <div class="container">
             <h1>bring all your friends. get 30% discount!</h1>
             <p>if you like to build your friends also come with us together get discount </p>
@@ -103,7 +111,7 @@
         </div>
     </div>
     <!-- featured class -->
-    <div class="featured">
+    <div class="featured" id="classes">
         <div class="container">
             <h1 class="title">our featured class</h1>
             <p class="p">these our featured class is welcome you by our profitional trainers/ coaches and provice the lastest and proficialist services of the world</p>
@@ -112,21 +120,21 @@
                     <img src="./img/bruce-mars-gJtDg6WfMlQ-unsplash-min.jpg" alt="">
                     <div class="text">
                         <h3>yoga</h3>
-                        <p>Martial arts is one featured programs we are offering to take and we sure it will help as much as you think </p>
+                        <p>Yoga fit is where you can find balance and energy renewal amidst the bustle of everyday pressures and deadlines..</p>
                     </div>
                 </div>
                 <div class="card">
                     <img src="./img/alora-griffiths-LOnMc8Rp1Qs-unsplash-min.jpg" alt="">
                     <div class="text">
                         <h3>mass gain</h3>
-                        <p>Martial arts is one featured programs we are offering to take and we sure it will help as much as you think </p>
+                        <p>To make your muscles gorw nicely and fast you need to eat fast grow protein and do lots of workout.</p>
                     </div>
                 </div>
                 <div class="card">
                     <img src="./img/anupam-mahapatra-Vz0RbclzG_w-unsplash-min.jpg" alt="">
                     <div class="text">
                         <h3>team work</h3>
-                        <p>Martial arts is one featured programs we are offering to take and we sure it will help as much as you think </p>
+                        <p>Daily meeting and making exercieses together will alot motivate your selves in daily motivation</p>
                     </div>
                 </div>
                 <div class="card">
@@ -140,14 +148,14 @@
                     <img src="./img/dylan-gillis-YJdCZba0TYE-unsplash-min.jpg" alt="">
                     <div class="text">
                         <h3>coching</h3>
-                        <p>Martial arts is one featured programs we are offering to take and we sure it will help as much as you think </p>
+                        <p>Training without coach or trainer will harm your health and life while searching health.</p>
                     </div>
                 </div>
                 <div class="card">
                     <img src="./img/jonathan-borba-lrQPTQs7nQQ-unsplash-min.jpg" alt="">
                     <div class="text">
                         <h3>crunchs</h3>
-                        <p>Martial arts is one featured programs we are offering to take and we sure it will help as much as you think </p>
+                        <p>One of the most important workout to get sixpack fast and smoohly is crunches do 100s of this or over.</p>
                     </div>
                 </div>
             </div>
@@ -165,7 +173,7 @@
         </div>
     </div>
     <!-- coaches -->
-    <div class="coaches">
+    <div class="coaches" id="FAQ">
         <div class="container">
             <h1>answers of your questions</h1>
             <p class="p">These expert trainers will help the guiding and consulting of your to successfull target. <br> come take their advice and courses</p>
@@ -235,7 +243,7 @@
         </div>
     </div>
     <!-- scheme -->
-    <div class="shax">
+    <div class="shax" id="shax">
         <div class="container">
             <h1 class="title">class schedule</h1>
             <div class="table_wrapp">
@@ -300,7 +308,7 @@
         </div>
     </div>
     <!-- trainers -->
-    <div class="teach">
+    <div class="teach" id="coaches">
         <div class="container">
             <h1 class="title">Mofitness trainers</h1>
             <p  class="p">these are our trainers in this center you can get in touch them to help you.</p>
@@ -403,10 +411,11 @@
     </div>
     <!-- our image gallery  ends ------------ -->
     <!-- contact -->
-    <div class="contact">
+    <div class="contact" id="contact">
         <div class="container">
             <h1 class="title">contact us</h1>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos distinctio vel placeat porro iure. Consequatur incidunt id beatae eius expedita cumque perferendis, asperiores enim ipsam vel alias, similique autem dolorem!</p>
+            <h3>get in touch below</h3>
+            <p>Contact us for more information about <span>mofitness</span>, training and the course you need. We shall help all about you need as consaltant and full training get in touch us.</p>
             <div class="inner">
                 <form>
                     <div class="both">
@@ -421,12 +430,11 @@
                     <button class="btn">contact us</button>
                 </form>
                 <div class="img">
-                    <img src="./img/coen-van-de-broek-OFyh9TpMyM8-unsplash-min.jpg" alt="">
+                    <img src="./img/maps.jpg" alt="">
                 </div>
             </div>
         </div>
     </div>
-
     <!-- footers -->
     <footer>
         <div class="container">
