--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                     </li>
                     <li>
                         <span class="icon"><i class="fa fa-map-marker"></i></span>
-                        <span class="name">+27 677 897 665</span>
+                        <span class="name">Western cape, capeTown S.A.</span>
                     </li>
                 </ul>
             </div>
