--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Nunito&family=Poppins:wght@400;500&family=Satisfy&display=swap" rel="stylesheet">
     <!-- boootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- animate on scroll  -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--  -->
     <link rel="stylesheet" href="./css/style.css">
     <title>Mofitness</title>
@@ -42,7 +44,7 @@
     <!-- showcase -->
     <div class="showcase" id="home">
         <div class="container">
-            <div class="text">
+            <div class="text" data-aos="fade-up">
                 <h1>let's make <span> your body</span> with a good shape.</h1>
                 <p>making excersice makes <span>your body fit, healthy</span> and more beautiful than normal.</p>
                 <button class="btn">join us</button>
@@ -55,7 +57,7 @@
             <div class="img">
                 <img src="./img/alora-griffiths-LOnMc8Rp1Qs-unsplash-min.jpg" alt="">
             </div>
-            <div class="text">
+            <div class="text" data-aos="zoom-in">
                 <h1>about us</h1>
                 <p>Mofitness is one of the best gym and bodybuilding ares where you can build your body, health , diet and mentality. at Mofitness there are expert coaches from universities of the world and they have certificaties about nutrition and phythiorepest</p>
                 <p>Relax and enjoy a personalized day yoga experience in our camfortable sancuary. Be happy, do your homework and workouts never stop train continueosly.</p>
@@ -69,32 +71,32 @@
             <h1 class="title">our program</h1>
             <p class="p">Ready to change your life to get physique with beatiful and healthy.healthy body makes active mind.</p>
             <div class="grid">
-                <div class="card">
+                <div class="card" data-aos="zoom-in">
                     <i class="fa fa-heart"></i>
                     <h3>balance body</h3>
                     <p>Balance your body means you have to have the avarage weight needs if your kg is divided into height</p>
                 </div>
-                <div class="card">
+                <div class="card" data-aos="zoom-in">
                     <i class="fas fa-tint"></i>
                     <h3>healthy daily life</h3>
                     <p>Being health is the existance on earth after the end of life so to haave healthy you need to make your body more clean and built.</p>
                 </div>
-                <div class="card">
+                <div class="card" data-aos="zoom-in">
                     <i class="fa fa-user"></i>
                     <h3>challenge</h3>
                     <p>Chalanging with others can make you do alot even if you can because you are trying to be the best.</p>
                 </div>
-                <div class="card">
+                <div class="card" data-aos="zoom-in">
                     <i class="fa fa-dumbbell"></i>
                     <h3>weight lifting</h3>
                     <p>Wimply dummy text of the printing and typesetting industryrem Ipsum has been ttandard dummy</p>
                 </div>
-                <div class="card">
+                <div class="card" data-aos="zoom-in">
                     <i class="fas fa-weight"></i>
                     <h3>weight loss</h3>
                     <p>If you want to look pretty damn and wear every size you want without getting disturbed weight loss the un needed</p>
                 </div>
-                <div class="card">
+                <div class="card" data-aos="zoom-in">
                     <i class="fas fa-fire-alt"></i>
                     <h3>fat burning</h3>
                     <p>Having alot of fats of your body can cause you heart diseases you need make fat burning workout</p>
@@ -116,42 +118,42 @@
             <h1 class="title">our featured class</h1>
             <p class="p">these our featured class is welcome you by our profitional trainers/ coaches and provice the lastest and proficialist services of the world</p>
             <div class="grid">
-                <div class="card">
+                <div class="card" data-aos="zoom-in">
                     <img src="./img/bruce-mars-gJtDg6WfMlQ-unsplash-min.jpg" alt="">
                     <div class="text">
                         <h3>yoga</h3>
                         <p>Yoga fit is where you can find balance and energy renewal amidst the bustle of everyday pressures and deadlines..</p>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card" data-aos="zoom-in">
                     <img src="./img/alora-griffiths-LOnMc8Rp1Qs-unsplash-min.jpg" alt="">
                     <div class="text">
                         <h3>mass gain</h3>
                         <p>To make your muscles gorw nicely and fast you need to eat fast grow protein and do lots of workout.</p>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card" data-aos="zoom-in">
                     <img src="./img/anupam-mahapatra-Vz0RbclzG_w-unsplash-min.jpg" alt="">
                     <div class="text">
                         <h3>team work</h3>
                         <p>Daily meeting and making exercieses together will alot motivate your selves in daily motivation</p>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card" data-aos="zoom-in">
                     <img src="./img/coen-van-de-broek-OFyh9TpMyM8-unsplash-min.jpg" alt="">
                     <div class="text">
                         <h3>cycling</h3>
                         <p>Martial arts is one featured programs we are offering to take and we sure it will help as much as you think </p>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card" data-aos="zoom-in">
                     <img src="./img/dylan-gillis-YJdCZba0TYE-unsplash-min.jpg" alt="">
                     <div class="text">
                         <h3>coching</h3>
                         <p>Training without coach or trainer will harm your health and life while searching health.</p>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card" data-aos="zoom-in">
                     <img src="./img/jonathan-borba-lrQPTQs7nQQ-unsplash-min.jpg" alt="">
                     <div class="text">
                         <h3>crunchs</h3>
@@ -164,7 +166,7 @@
      <!-- training -->
      <div class="training">
         <div class="container">
-            <div class="text">
+            <div class="text" data-aos="zoom-in">
                 <h1>get training today</h1>
                 <p>daily trainig converts you become a new person with more attractive and stylish.</p>
                 <button class="btn">start today</button>
@@ -175,10 +177,10 @@
     <!-- coaches -->
     <div class="coaches" id="FAQ">
         <div class="container">
-            <h1>answers of your questions</h1>
+            <h1 data-aos="zoom-in">answers of your questions</h1>
             <p class="p">These expert trainers will help the guiding and consulting of your to successfull target. <br> come take their advice and courses</p>
           
-            <div class="accordion accordion-flush" id="accordionFlushExample">
+            <div class="accordion accordion-flush" id="accordionFlushExample" data-aos="zoom-in">
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="flush-headingOne">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
@@ -243,7 +245,7 @@
         </div>
     </div>
     <!-- scheme -->
-    <div class="shax" id="shax">
+    <div class="shax" id="shax" data-aos="zoom-in">
         <div class="container">
             <h1 class="title">class schedule</h1>
             <div class="table_wrapp">
@@ -313,28 +315,28 @@
             <h1 class="title">Mofitness trainers</h1>
             <p  class="p">these are our trainers in this center you can get in touch them to help you.</p>
             <div class="grid">
-                <div class="card">
+                <div class="card" data-aos="zoom-in">
                     <img src="./img/emily-sea-coiWR0gT8Cw-unsplash-min.jpg" alt="">
                     <div class="pop">
                         <h3>alex meris</h3>
                         <p>women full body</p>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card" data-aos="zoom-in">
                     <img src="./img/total-shape-TY_Ce5d2G-k-unsplash-min.jpg" alt="">
                     <div class="pop">
                         <h3>Mo fit</h3>
                         <p>Head Quater</p>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card" data-aos="zoom-in">
                     <img src="./img/sule-makaroglu-YFmvjO3TP_s-unsplash-min.jpg" alt="">
                     <div class="pop">
                         <h3>James</h3>
                         <p>chest and back</p>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card" data-aos="zoom-in">
                     <img src="./img/damir-spanic-rHDK3UU7HUw-unsplash-min.jpg" alt="">
                     <div class="pop">
                         <h3> meris</h3>
@@ -349,8 +351,8 @@
         <div class="container">
             <h1 class="title">our clients</h1>
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
+                <div class="carousel-inner" data-aos="zoom-in">
+                  <div class="carousel-item active" data-aos="zoom-in">
                       <i class="fa fa-quote-left"></i>
                     <p>The origin of yoga have been speculated to date back to pre-vedic indian tradition.but most likely developed around the dix and fifth centuries.</p>
                     <div class="img">
@@ -359,7 +361,7 @@
                         <span class="jop">ex-fat girl</span>
                     </div>
                   </div>
-                  <div class="carousel-item ">
+                  <div class="carousel-item " data-aos="zoom-in">
                     <i class="fa fa-quote-left"></i>
                     <p>I never know i'm handsome like this there is really alot hidden piciatis, consectetur ab. Rem nisi asperiores obcaecati magni, commodi animi distinctio assumenda?</p>
                     <div class="img">
@@ -416,7 +418,7 @@
             <h1 class="title">contact us</h1>
             <h3>get in touch below</h3>
             <p>Contact us for more information about <span>mofitness</span>, training and the course you need. We shall help all about you need as consaltant and full training get in touch us.</p>
-            <div class="inner">
+            <div class="inner" data-aos="zoom-in">
                 <form>
                     <div class="both">
                         <input type="text" placeholder="First name">
@@ -499,5 +501,13 @@
     <script src="https://kit.fontawesome.com/405f30ee9a.js"></script>
     <!-- bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <!-- animate on scroll link to script tag -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- ------------------------------------ -->
+        <script>
+        AOS.init(
+            duration='300',
+        );
+     </script>
 </body>
 </html>
