--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <div class="discount" id="discount">
         <div class="container">
             <h1>bring all your friends. get 30% discount!</h1>
-            <p>if you like to build your friends also come with us together get discount </p>
+            <p>if you like to build your friends also come with us together get discount..... </p>
             <button class="btn">join us</button>
         </div>
     </div>
